<resources>
    <string name="app_name">Onboarding POC</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arebic">Arebic</string>
    <string name="proceed">Proceed</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="result_data">Result data :</string>
    <string name="encrypt_using_app_instance">Encrypt using app instance</string>
    <string name="login">LOGIN</string>
    <string name="error_username">Mandatory field Username</string>
    <string name="error_password">Mandatory Field Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="movielist">MovieList_MVP</string>
    <string name="agreement">I agree the terms and conditions</string>
    <string name="clear_pad">Clear Pad</string>
    <string name="save_signature">Save Signature</string>
    <string name="take_signature">Take Signature</string>
    <string name="upload_document">Upload Document</string>
    <string name="title_activity_upload_document">UploadDocumentActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
